fix: avoid double borders in search modal

--- a/assets/sections-optional.css
+++ b/assets/sections-optional.css
@@ -797,9 +797,8 @@ input[type='search']::-webkit-search-decoration {
   }
 
   .dialog-modal .predictive-search-form__header-inner {
-    @media screen and (min-width: 750px) {
-      border: 0;
-    }
+    border: 0;
+    box-shadow: none;
   }
 
   .header[transparent] :is(.predictive-search):not(:focus-within) {
